<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.login.signup.SignUpFragment">

    <ImageView
        android:id="@+id/iV_register_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iV_register_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/irem_gmail_com"
            android:hint="@string/e_mail_giriniz" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:text="@string/irem1234"
            android:layout_height="match_parent"
            android:hint="@string/Sifre_giriniz" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tV_register_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kay_tl_m_s_n_giri_yap"
        android:layout_marginTop="4dp"
        android:layout_marginStart="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_register_password"
        >

    </TextView>

    <Button
        android:id="@+id/btn_register_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kay_t_ol"
        android:backgroundTint="#7c898b"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@+id/tl_register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>