<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/item_iV_search"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <TextView
        android:id="@+id/item_tV_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/namebook"
        app:layout_constraintStart_toEndOf="@id/item_iV_search"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_tV_categoryname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        app:layout_constraintStart_toEndOf="@id/item_iV_search"
        app:layout_constraintTop_toBottomOf="@+id/item_tV_name" />

    <TextView
        android:id="@+id/item_tV_authorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/author"
        app:layout_constraintStart_toEndOf="@id/item_iV_search"
        app:layout_constraintTop_toBottomOf="@+id/item_tV_categoryname"/>


</androidx.constraintlayout.widget.ConstraintLayout>